# cliaiai

./: .env  .envrc  README.md  aliases.zsh  pyproject.toml
cliaiai/: api.py  command.py  pr.py  tools.py  translate.py
