[tool.poetry]
name = "cliaiai"
version = "0.1.0"
description = ""
authors = ["thesebas <thesebas@thesebas.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.5"
click = "^8.1.7"
inquirerpy = "^0.3.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pytest = "^7.4.3"

[tool.poetry.scripts]
cliaiai = "bin.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
